--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -33,6 +33,22 @@
     font-size: 18px;
 }
 
+.w-small {
+    width: 101px !important;
+}
+
+.px-mobile {
+    padding: 0 24px;
+}
+
+.mt-large {
+    margin-top: 52%;
+}
+
+.text-black {
+    color: black;
+}
+
 body {
     font-family: Urbanist !important;
     background: white;
@@ -201,10 +217,6 @@ footer {
     }
 }
 
-.mb-large {
-    margin-bottom: 5rem;
-}
-
 .padding-lrb {
     padding: 0 3rem 1rem 3rem;
 }
@@ -227,6 +239,7 @@ footer {
     height: 56px;
     width: 100%;
     padding: 12px 82px;
+    cursor: pointer;
 }
 
 .p-32 {
@@ -244,6 +257,63 @@ footer {
         color: #000000;
         opacity: 0.8;
     }
+}
+
+.btn-close {
+    cursor: pointer;
+    border: 0;
+    background-color: transparent;
+}
+
+.tabs {
+    margin-top: 2rem;
+    ul {
+        border-bottom-color: transparent;
+        border-bottom-style: none;
+        li {
+            border-bottom-color: transparent;
+            border-bottom-style: none;
+            a {
+                padding: 0 0 12px 0;
+                margin-right: 48px;
+                color: rgba(0, 0, 0, 0.3);
+                font-weight: 600;
+                font-size: 18px;
+                border-bottom-style: none;
+            }
+        }
+        li.is-active a {
+            border-bottom: 2px solid black;
+            color: black;
+            padding: 0 0 12px 0;
+            font-weight: 600;
+            font-size: 18px;
+        }
+    }
+}
+
+.button-delete {
+    color: #FF6363;
+    border: none;
+    background: transparent;
+    height: 56px;
+}
+
+.transparent-btn {
+    border: 1px solid rgba(0, 0, 0, 0.2) !important;
+    color: black;
+    background-color: transparent;
+    font-size: 16px;
+    border-radius: 0;
+    height: 56px;
+}
+
+.gray-btn {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 0;
+    height: 56px;
+    font-weight: 600;
 }
 
 @media(min-width: 1024px) {
@@ -296,6 +366,31 @@ footer {
     .category-num {
         img { padding-left: 1.5rem}
     }
+    .mb-large {
+        margin-bottom: 5rem;
+    }
+
+    .mb-xlarge {
+        margin-bottom: 13rem;
+        margin-top: 1.5rem;
+    }
+    .box-container {
+        padding: 2rem;
+    }
+    .edit-link {
+        margin-left: 2rem;
+    }
+    .modal {
+        .modal-content {
+            width: 480px;
+        }
+    }
+    .inpt-search {
+        width: 320.9px
+    }
+    .pl-none {
+        padding-left: 0;
+    }
 }
 
 @media only screen
@@ -308,6 +403,18 @@ footer {
 }
 
 @media(max-width: 1023px) {
+    .tabs {
+        ul {
+            li {
+                a {
+                    margin-right: 24px;
+                }
+            }
+        }
+    }
+    .edit-link {
+        margin-left: auto;
+    }
     .google-icon {
         margin-right: 1rem;
         width: 6%;
@@ -789,34 +896,6 @@ footer {
             background: #78CB7C;
         }
 
-        .transparent-btn {
-            border: 1px solid rgba(0, 0, 0, 0.2) !important;
-            color: black;
-            background-color: transparent;
-            font-size: 16px;
-            border-radius: 0;
-            height: 56px;
-        }
-
-        .gray-btn {
-            color: white;
-            background-color: rgba(0, 0, 0, 0.4);
-            border-radius: 0;
-            height: 56px;
-            font-weight: 600;
-        }
-
-        .button-delete {
-            color: #FF6363;
-            border: none;
-            background: transparent;
-            height: 56px;
-        }
-
-        .text-black {
-            color: black;
-        }
-
         .custom-dropdown {
             .dropdown {
                 display: block;
@@ -851,32 +930,6 @@ footer {
             width: 112px;
             height: 112px;
             background-color: #f5f6f7;
-        }
-
-        .tabs {
-            ul {
-                border-bottom-color: transparent;
-                border-bottom-style: none;
-                li {
-                    border-bottom-color: transparent;
-                    border-bottom-style: none;
-                    a {
-                        padding: 0 0 12px 0;
-                        margin-right: 24px;
-                        color: rgba(0, 0, 0, 0.3);
-                        font-weight: 600;
-                        font-size: 18px;
-                        border-bottom-style: none;
-                    }
-                }
-                li.is-active a {
-                    border-bottom: 2px solid black;
-                    color: black;
-                    padding: 0 0 12px 0;
-                    font-weight: 600;
-                    font-size: 18px;
-                }
-            }
         }
 
         .zip-modal {
