--- a/public/css/global.css
+++ b/public/css/global.css
@@ -32,14 +32,6 @@
   font-size: 18px;
 }
 
-.w-small {
-  width: 101px !important;
-}
-
-.px-mobile {
-  padding: 0 24px;
-}
-
 .mt-large {
   margin-top: 52%;
 }
@@ -97,7 +89,7 @@ label {
 }
 
 select {
-  border: none;
+  border-color: transparent !important;
   color: black;
 }
 
@@ -308,6 +300,74 @@ footer .text-gray {
   font-weight: 600;
 }
 
+.custom-dropdown .dropdown {
+  display: block;
+}
+.custom-dropdown .dropdown .dropdown-menu {
+  padding-top: 0;
+  top: 88%;
+  position: unset;
+}
+.custom-dropdown .dropdown .dropdown-menu .dropdown-content {
+  position: relative;
+  border-radius: 0;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.24), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+  padding-top: 0;
+  margin-top: -5px;
+}
+
+.dropdown.is-fullwidth, .dropdown-trigger.is-fullwidth, .dropdown-menu {
+  width: 100%;
+}
+
+.button-dropdown {
+  border: none;
+}
+
+.site-logo {
+  width: 112px;
+  height: 112px;
+  background-color: #f5f6f7;
+}
+
+.radio_button {
+  display: flex;
+  cursor: pointer;
+  font-weight: 500;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 0.375em;
+}
+.radio_button input {
+  position: absolute;
+  left: -9999px;
+}
+.radio_button input:checked + span {
+  background-color: transparent;
+}
+.radio_button input:checked + span:before {
+  box-shadow: inset 0 0 0 0.4375em #000000;
+}
+.radio_button span {
+  display: flex;
+  align-items: center;
+  padding: 0.375em 0.75em 0.375em 0.375em;
+  border-radius: 99em;
+  transition: 0.25s ease;
+}
+.radio_button span:before {
+  display: flex;
+  flex-shrink: 0;
+  content: "";
+  background-color: #fff;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  margin-right: 0.375em;
+  transition: 0.25s ease;
+  box-shadow: inset 0 0 0 0.125em rgba(0, 0, 0, 0.3);
+}
+
 @media (min-width: 1024px) {
   .navbar .navbar-start .navbar-item, .navbar .navbar-end .navbar-item {
     color: rgba(0, 0, 0, 0.3);
@@ -383,10 +443,36 @@ footer .text-gray {
   .pl-none {
     padding-left: 0;
   }
+
+  .fs-18-desktop {
+    font-size: 18px;
+  }
+
+  .w-small {
+    width: 240px !important;
+  }
+
+  .margin-post {
+    margin-top: 5.5rem;
+    margin-left: 3rem;
+  }
+
+  .margin-settings {
+    margin-top: 6rem;
+    margin-left: 3rem;
+  }
+
+  .margin-left-column {
+    margin-left: 3rem;
+  }
 }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   .w-full {
     width: 100%;
+  }
+
+  .w-small {
+    width: 240px !important;
   }
 }
 @media (max-width: 1023px) {
@@ -479,6 +565,26 @@ footer .text-gray {
   }
   footer .f-margin {
     margin-top: 1.5rem;
+  }
+
+  .px-mobile {
+    padding: 0 24px;
+  }
+
+  .switch[type=checkbox] + label::after, .switch[type=checkbox] + label:after {
+    width: 26px;
+    height: 26px;
+    top: 3px;
+  }
+
+  .switch[type=checkbox] + label::before, .switch[type=checkbox] + label:before {
+    width: 56px;
+    height: 32px;
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  .switch[type=checkbox]:checked + label::before, .switch[type=checkbox]:checked + label:before {
+    background: #78CB7C;
   }
 }
 @media (max-width: 736px) {
@@ -800,87 +906,8 @@ footer .text-gray {
     height: 24px;
     margin-right: 8px;
   }
-  #row_level_components .radio_button {
-    display: flex;
-    cursor: pointer;
-    font-weight: 500;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 0.375em;
-  }
-  #row_level_components .radio_button input {
-    position: absolute;
-    left: -9999px;
-  }
-  #row_level_components .radio_button input:checked + span {
-    background-color: transparent;
-  }
-  #row_level_components .radio_button input:checked + span:before {
-    box-shadow: inset 0 0 0 0.4375em #000000;
-  }
-  #row_level_components .radio_button span {
-    display: flex;
-    align-items: center;
-    padding: 0.375em 0.75em 0.375em 0.375em;
-    border-radius: 99em;
-    transition: 0.25s ease;
-  }
-  #row_level_components .radio_button span:hover {
-    background-color: #d6d6d6;
-  }
-  #row_level_components .radio_button span:before {
-    display: flex;
-    flex-shrink: 0;
-    content: "";
-    background-color: #fff;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    margin-right: 0.375em;
-    transition: 0.25s ease;
-    box-shadow: inset 0 0 0 0.125em rgba(0, 0, 0, 0.3);
-  }
-  #row_level_components .switch[type=checkbox] + label::after, #row_level_components .switch[type=checkbox] + label:after {
-    width: 26px;
-    height: 26px;
-    top: 3px;
-  }
-  #row_level_components .switch[type=checkbox] + label::before, #row_level_components .switch[type=checkbox] + label:before {
-    width: 56px;
-    height: 32px;
-    background: rgba(0, 0, 0, 0.3);
-  }
-  #row_level_components .switch[type=checkbox]:checked + label::before, #row_level_components .switch[type=checkbox]:checked + label:before {
-    background: #78CB7C;
-  }
-  #row_level_components .custom-dropdown .dropdown {
-    display: block;
-  }
-  #row_level_components .custom-dropdown .dropdown .dropdown-menu {
-    padding-top: 0;
-    top: 88%;
-    position: unset;
-  }
-  #row_level_components .custom-dropdown .dropdown .dropdown-menu .dropdown-content {
-    position: relative;
-    border-radius: 0;
-    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.24), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-    padding-top: 0;
-    margin-top: -5px;
-  }
-  #row_level_components .dropdown.is-fullwidth, #row_level_components .dropdown-trigger.is-fullwidth, #row_level_components .dropdown-menu {
-    width: 100%;
-  }
   #row_level_components .add-new {
     padding: 20px;
-  }
-  #row_level_components .button-dropdown {
-    border: none;
-  }
-  #row_level_components .site-logo {
-    width: 112px;
-    height: 112px;
-    background-color: #f5f6f7;
   }
   #row_level_components .zip-modal .modal-card {
     height: 100%;
