--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -33,14 +33,6 @@
     font-size: 18px;
 }
 
-.w-small {
-    width: 101px !important;
-}
-
-.px-mobile {
-    padding: 0 24px;
-}
-
 .mt-large {
     margin-top: 52%;
 }
@@ -101,7 +93,7 @@ label {
 }
 
 select {
-    border: none;
+    border-color: transparent !important;
     color: black;
 }
 
@@ -316,6 +308,76 @@ footer {
     font-weight: 600;
 }
 
+.custom-dropdown {
+    .dropdown {
+        display: block;
+        .dropdown-menu {
+            padding-top: 0;
+            top: 88%;
+            position: unset;
+            .dropdown-content {
+                position: relative;
+                border-radius: 0;
+                box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 24%), 0 0px 0 1px rgb(10 10 10 / 2%);
+                padding-top: 0;
+                margin-top: -5px;
+            }
+        }
+    }
+}
+
+.dropdown.is-fullwidth, .dropdown-trigger.is-fullwidth, .dropdown-menu {
+    width: 100%;
+}
+
+.button-dropdown {
+    border: none;
+}
+
+.site-logo {
+    width: 112px;
+    height: 112px;
+    background-color: #f5f6f7;
+}
+
+.radio_button {
+    display: flex;
+    cursor: pointer;
+    font-weight: 500;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 0.375em;
+    input {
+        position: absolute;
+        left: -9999px;
+        &:checked + span {
+            background-color: transparent;
+            &:before {
+                box-shadow: inset 0 0 0 0.4375em #000000;
+            }
+        }
+    }
+    span {
+        display: flex;
+        align-items: center;
+        padding: 0.375em 0.75em 0.375em 0.375em;
+        border-radius: 99em;
+        transition: 0.25s ease;
+        &:before {
+            display: flex;
+            flex-shrink: 0;
+            content: "";
+            background-color: #fff;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            margin-right: 0.375em;
+            transition: 0.25s ease;
+            box-shadow: inset 0 0 0 0.125em rgba(0, 0, 0, 0.3);
+        }
+    }
+}
+
 @media(min-width: 1024px) {
     .navbar {
         .navbar-start, .navbar-end {
@@ -391,6 +453,23 @@ footer {
     .pl-none {
         padding-left: 0;
     }
+    .fs-18-desktop {
+        font-size: 18px;
+    }
+    .w-small {
+        width: 240px !important;
+    }
+    .margin-post {
+        margin-top: 5.5rem;
+        margin-left: 3rem;
+    }
+    .margin-settings {
+        margin-top: 6rem;
+        margin-left: 3rem;
+    }
+    .margin-left-column {
+        margin-left: 3rem;
+    }
 }
 
 @media only screen
@@ -399,6 +478,9 @@ footer {
   and (-webkit-min-device-pixel-ratio: 1) {
     .w-full {
         width: 100%;
+    }
+    .w-small {
+        width: 240px !important;
     }
 }
 
@@ -481,6 +563,23 @@ footer {
         .f-margin {
             margin-top: 1.5rem;
         }
+    }
+    .px-mobile {
+        padding: 0 24px;
+    }
+    .switch[type=checkbox] + label::after, .switch[type=checkbox] + label:after {
+        width: 26px;
+        height: 26px;
+        top: 3px;
+    }
+    .switch[type=checkbox] + label::before, .switch[type=checkbox] + label:before {
+        width: 56px;
+        height: 32px;
+        background: rgba(0, 0, 0, 0.3);
+    }
+
+    .switch[type=checkbox]:checked + label::before, .switch[type=checkbox]:checked + label:before {
+        background: #78CB7C;
     }
 }
 
@@ -840,96 +939,8 @@ footer {
             margin-right: 8px;
         }
 
-        .radio_button {
-            display: flex;
-            cursor: pointer;
-            font-weight: 500;
-            position: relative;
-            overflow: hidden;
-            margin-bottom: 0.375em;
-            input {
-                position: absolute;
-                left: -9999px;
-                &:checked + span {
-                    background-color: transparent;
-                    &:before {
-                        box-shadow: inset 0 0 0 0.4375em #000000;
-                    }
-                }
-            }
-            span {
-                display: flex;
-                align-items: center;
-                padding: 0.375em 0.75em 0.375em 0.375em;
-                border-radius: 99em;
-                transition: 0.25s ease;
-                &:hover {
-                    background-color: mix(#fff, #000000, 84%);
-                }
-                &:before {
-                    display: flex;
-                    flex-shrink: 0;
-                    content: "";
-                    background-color: #fff;
-                    width: 24px;
-                    height: 24px;
-                    border-radius: 50%;
-                    margin-right: 0.375em;
-                    transition: 0.25s ease;
-                    box-shadow: inset 0 0 0 0.125em rgba(0, 0, 0, 0.3);
-                }
-            }
-        }
-
-        .switch[type=checkbox] + label::after, .switch[type=checkbox] + label:after {
-            width: 26px;
-            height: 26px;
-            top: 3px;
-        }
-        .switch[type=checkbox] + label::before, .switch[type=checkbox] + label:before {
-            width: 56px;
-            height: 32px;
-            background: rgba(0, 0, 0, 0.3);
-        }
-
-        .switch[type=checkbox]:checked + label::before, .switch[type=checkbox]:checked + label:before {
-            background: #78CB7C;
-        }
-
-        .custom-dropdown {
-            .dropdown {
-                display: block;
-                .dropdown-menu {
-                    padding-top: 0;
-                    top: 88%;
-                    position: unset;
-                    .dropdown-content {
-                        position: relative;
-                        border-radius: 0;
-                        box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 24%), 0 0px 0 1px rgb(10 10 10 / 2%);
-                        padding-top: 0;
-                        margin-top: -5px;
-                    }
-                }
-            }
-        }
-
-        .dropdown.is-fullwidth, .dropdown-trigger.is-fullwidth, .dropdown-menu {
-            width: 100%;
-        }
-
         .add-new {
             padding: 20px;
-        }
-
-        .button-dropdown {
-            border: none;
-        }
-
-        .site-logo {
-            width: 112px;
-            height: 112px;
-            background-color: #f5f6f7;
         }
 
         .zip-modal {
@@ -1108,8 +1119,6 @@ footer {
 
     footer {
         background-color: black;
-        // position: relative;
-        // top: 133px;
         h3 {
             color: white;
             font-weight: 600;
